[project]
name = "beancount-balexpr"
version = "0.5.0"
description = "Check balances against simple expressions in beancount"
readme = "README.md"
authors = [
    { name = "Di Weng", email = "dweng.cs@outlook.com" }
]
requires-python = ">=3.3"
dependencies = [
    "beancount>=2.3.0",
    "pytest>=4.6.11",
    "setuptools>=44.1.1",
    "wheel>=0.37.1",
]

[project.scripts]
beancount-balexpr = "beancount_balexpr:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
